# elia-opendata

./: .gitignore  README.md  elia_catalog.md  elia_postman.postman_collection.json  examples.ipynb  mkdocs.yml  pyproject.toml  requirements-test.txt  setup.py
.github/workflows/: deploy-docs.yml  pre-release.yml  python-publish.yml
docs/: examples.md  index.md
docs/reference/: data_fetcher.md  data_processor.md
elia_opendata/: __init__.py  client.py  data_fetcher.py  data_processor.py  dataset_catalog.py  datasets.py  error.py  imbalance_data_processor.py  models.py
examples/: basic_usage_dataProcessor.py  demo_api_usage.py
tests/: test_client.py  test_current_value.py  test_data_fetcher.py  test_data_processor.py  test_fetch_performance.py  test_models.py
