[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "elia-opendata"
version = "0.1.0"
description = "Python Client for Elia Open Data"
authors = [
    { name="Your Name", email="your.email@example.com" }
]
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    # List your runtime dependencies here, for example:
    # "requests >=2.0"
]
requires-python = ">=3.7"